Begin the creation of the welcome/landing page

--- a/shoppinglist/templates/shoppinglist/index.html
+++ b/shoppinglist/templates/shoppinglist/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Welcome Page</title>
 </head>
 <body>
-    <h1>Welcome to the Shopping List Planner</h1>
+    <h1>Shopping List Planner</h1>
+    <p>Welcome to our Shopping List Planner app, an app that lets you manage your shopping 
+       from groceries to clothing and so much more and keeps you organised to face the task 
+       ahead in a fun relaxed way. </p>
 </body>
 </html>
