--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -8,5 +8,29 @@
 </head>
 <body>
     <h1>My Shopping List:</h1>
+    {{ shoppinglistitems }}
+    <table>
+        <tr>
+            <th>Item Name</th>
+            <th>Quantity</th>
+            <th>Unit Price</th>
+            <th>Total Price</th>
+            <th>Date Created</th>
+            <th>Date Updated</th>
+            <th>Done Status</th>
+        </tr> 
+        {% for shoppinglistitem in shoppinglistitems %}
+        <!-- This will render in a table format the values of the 'shoppinglistitems' keys created within our 'context' variable in views.py -->
+            <tr>
+                <td>{{ shoppinglistitem.item_name }}</td> 
+                <td>{{ shoppinglistitem.quantity }}</td> 
+                <td>{{ shoppinglistitem.unit_price }}</td> 
+                <td>{{ shoppinglistitem.total_price }}</td> 
+                <td>{{ shoppinglistitem.date_created }}</td> 
+                <td>{{ shoppinglistitem.date_updated }}</td> 
+                <td>{{ shoppinglistitem.done_status }}</td>  
+            </tr>
+        {% endfor %}
+    </table>
 </body>
 </html>
