--- a/shoppinglist/templates/shoppinglist/add_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/add_shopping_item.html
@@ -12,9 +12,10 @@
         </form>
         
     {% else %} <!-- If user is not authenticated -->
-        <p>Sorry! You cannot add items to the shopping list because you are not currently 
-        logged in. Please sign in if you already have an account or sign up for one.
-    </p>     
+        <p>
+            Sorry! You cannot add items to your shopping list because you are not currently 
+            logged in. Please sign in if you already have an account or sign up for one.
+        </p>     
     {% endif %} <!-- authentication end if -->
 
     <script>
