--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -35,18 +35,23 @@
                         <button>Edit item</button>
                     </a>    
                 </td>
-                <td>
+                <!-- <td>
                     <a href="/delete/{{ shoppinglistitem.id }}">
                         <button>Delete item</button>
                     </a>    
-                </td>
+                </td> -->
+                <td>
+                    <a href="{% url 'shoppinglistitem-delete' shoppinglistitem.id  %}">
+                        <button>Delete item</button>
+                    </a>    
+                </td> 
             </tr>
         {% empty %}
         <tr><td>Sorry!!! You currently have no items in your shopping list.</td></tr>
         {% endfor %}
         </table>
-        <a href="/add">Add an item</a>
-        <a href="/deletelist">Delete List</a>
+        <a href="/add"><button>Add an item</button></a>
+        <a href="/delete_list"><button>Delete List</button></a>
 
     {% else %} <!-- If user is not authenticated -->
     <p>
