--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -43,6 +43,8 @@
                 </li>
   
                 {% if user.is_authenticated %}
+                <p>{{user}}</p> 
+                <hr>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
                 </li>
