--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -9,7 +9,7 @@
         <a href="{% url 'get_shopping_list' %}">Go Back</a>
         <form method="POST">
             {% csrf_token %}
-            <p>Are you sure you want to delete this item? "{{shoppinglistitem}}"</p>
+            <p>Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
             <input type="submit" value="Delete Item" />
         </form>
     {% endblock %}
