Modify views, base & shoppinglist templates to add the login functionality

--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -43,7 +43,8 @@
                 </li>
   
                 {% if user.is_authenticated %}
-                <p>{{user}}</p> 
+                <!-- <p>{{user}}</p> -->
+                <p>Welcome {{ user.username }}!</p> 
                 <hr>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
@@ -54,7 +55,7 @@
                     <a class="nav-link" href="#">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="/login">Login</a>
                 </li>
                 {% endif %}
             </ul>
