--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -2,9 +2,10 @@
 <title>Home Page</title>
     {% block content %}
     {% if user.is_authenticated %}
-    <p>{{user}}</p>
+    <!-- <p>{{user}}</p> -->
     <hr>
-        <h1>Welcome {{ user.username }}! The items in your shopping list are:</h1>
+        <h1>The items in your shopping list are:</h1>
+        <!-- Welcome {{ user.username }}!  -->
         <table>
             <tr>
                 <th>Item Name</th>
@@ -69,10 +70,10 @@
         leaving you happy and fulfilled at the end. 
     </p>
     <p> 
-        Please <a href="#">sign in</a> if you already have an account or 
+        Please <a href="/login">sign in</a> if you already have an account or 
         <a href="#">sign up</a> for a new account to enjoy the benefits 
         this app has to offer.
-    </p>
+    </p>   
 
     <!--Sorry! You cannot view the shopping list because you are not currently logged in.-->
     
