--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -3,6 +3,13 @@
     {% block content %}
     {% if user.is_authenticated %}
     <!-- <p>{{user}}</p> -->
+    {% if messages %}
+    {% for message in messages %}
+    <div id="msg" class="alert alert-info" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
     <hr>
         <h1>The items in your shopping list are:</h1>
         <!-- Welcome {{ user.username }}!  -->
@@ -78,6 +85,21 @@
     <!--Sorry! You cannot view the shopping list because you are not currently logged in.-->
     
     {% endif %} <!-- authentication end if -->
+
+    <script>
+        /* The alert we set up above earlier will not go away by itself once displayed so we'll use a 
+        standard JavaScript setTimeout function to dismiss it. */
+        setTimeout(function() {
+            // Gets the ID of our messages div.
+            let messages = document.getElementById("msg");
+            /* This will assign a new Bootstrap alert to 'alert' variable & pass in the 'msg' ID 
+            that we've just got. */
+            let alert = new bootstrap.Alert(messages);
+            /* This will close the alert after 3000 milliseconds (i.e 3 seconds)   */
+            alert.close();
+        }, 3000);
+    </script>
+
     {% endblock %}
 
 
