--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -1,7 +1,9 @@
 {% extends 'shoppinglist/base.html' %}
-    <title>Confirm Delete Form</title>
 
-    {% block content %}
+{% block content %}
+
+    <title>Delete Shopping List Item</title>
+
     <!-- {% if user.is_authenticated %} -->
         <!-- <p>{{user}}</p> -->
     <!-- {% endif %} -->
@@ -12,4 +14,5 @@
             <p>Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
             <input type="submit" value="Delete Item" />
         </form>
-    {% endblock %}
+        
+{% endblock %}
