Modify shoppinglist.html template

--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -14,7 +14,7 @@
     {% endfor %}
     {% endif %} -->
     <hr>
-        <h1>The items in your shopping list are:</h1>
+        <h1>Welcome! The items in your shopping list are:</h1>
         <!-- Welcome {{ user.username }}!  -->
         <table>
             <tr>
@@ -80,7 +80,7 @@
         leaving you happy and fulfilled at the end. 
     </p>
     <p> 
-        Please <a href="shoppinglist/login">sign in</a> if you already have an account or 
+        Please <a href="/login">sign in</a> if you already have an account or 
         <a href="#">sign up</a> for a new account to enjoy the benefits 
         this app has to offer.
     </p>   
