Create the registration view & template

--- a/shoppinglist/templates/shoppinglist/edit_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/edit_shopping_item.html
@@ -14,9 +14,10 @@
         </form>
         
     {% else %} <!-- If user is not authenticated -->
-        <p>Sorry! You cannot edit items in the shopping list because you are not currently 
-        logged in. Please sign in if you already have an account or sign up for one.
-    </p>     
+        <p>
+            Sorry! You cannot edit items in the shopping list because you are not currently 
+            logged in. Please sign in if you already have an account or sign up for one.
+        </p>     
     {% endif %} <!-- authentication end if -->
 
     <script>
