--- a/shoppinglist/templates/shoppinglist/login.html
+++ b/shoppinglist/templates/shoppinglist/login.html
@@ -11,7 +11,7 @@
     {{form.as_p}}
     <input type="submit" value="Login">
 </form>
-<p>Don't have an account? <a href="#">Register</a> here</p>
+<p>Don't have an account? <a href="{% url 'register' %}">Register</a> here</p>
 
 {% endblock content %}
 
