--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -80,7 +80,7 @@
         leaving you happy and fulfilled at the end. 
     </p>
     <p> 
-        Please <a href="/login">sign in</a> if you already have an account or 
+        Please <a href="/login">log in</a> if you already have an account or 
         <a href="#">sign up</a> for a new account to enjoy the benefits 
         this app has to offer.
     </p>   
