--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -8,11 +8,20 @@
         <!-- <p>{{user}}</p> -->
     <!-- {% endif %} -->
     <hr>
+    {% if user.is_authenticated %}
         <a href="{% url 'get_shopping_list' %}">Go Back</a>
         <form method="POST">
             {% csrf_token %}
             <p>Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
             <input type="submit" value="Delete Item" />
         </form>
+
+    {% else %} <!-- If user is not authenticated -->
+        <p>
+            Sorry! You cannot delete items in the shopping list because you are not currently 
+            logged in. Please sign in if you already have an account or sign up for one.
+        </p> 
+        
+    {% endif %} <!-- authentication end if -->
         
 {% endblock %}
