--- a/shoppinglist/templates/shoppinglist/add_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/add_shopping_item.html
@@ -10,7 +10,7 @@
             {% csrf_token %}
             {{ form.as_p }}
 
-            <button type="submit">Add Item</button>
+            <button class="btn btn-primary" type="submit">Add Item</button>
         </form>
         
     {% else %} <!-- If user is not authenticated -->
