--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -4,9 +4,12 @@
 <html class="h-100">
 
 <head>
-    <!-- <title>ShoppingList Planner</title> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -15,8 +18,8 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-    </script>
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+    </script> -->
+    <!--  -->
 
 </head>
 
@@ -25,25 +28,25 @@
    <!-- Navigation -->
     <!--  This will appear on all pages -->
 
-   <nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-md navbar-light bg-white">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><span class="brand">
+        <a class="navbar-brand" href="/"><span class="brand">
             Sh<span class="red-o">o</span>ppingList<span class="thin">|Planner
             </span></span></span></a>
 
         <img class="relative" src="{% static 'images/shopping_list_image.jpg' %}"  alt="Shopping List Image">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        </button> 
+        <div class="collapse navbar-collapse" id="main-navigation">  <!-- navbarText-->
+            <ul class="navbar-nav">  <!--me-auto mb-2 mb-lg-0-->
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
   
                 {% if user.is_authenticated %}
-                            <!-- <p>{{user}}</p> -->
+                            
                 {% if messages %}
                 {% for message in messages %}
                 <div id="msg" class="alert alert-info" role="alert">
