--- a/shoppinglist/templates/shoppinglist/login.html
+++ b/shoppinglist/templates/shoppinglist/login.html
@@ -9,7 +9,8 @@
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Login">
+    <!-- <button class="btn btn-success"><input type="submit" value="Login"></button> -->
+    <button class="btn btn-success">Login</button>
 </form>
 <p>Don't have an account? <a href="{% url 'register' %}">Register</a> here</p>
 
