--- a/shoppinglist/templates/shoppinglist/register.html
+++ b/shoppinglist/templates/shoppinglist/register.html
@@ -9,7 +9,8 @@
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Register">
+    <!-- <input type="submit" value="Register"> -->
+    <button class="btn btn-success">Register</button>
 </form>
 <p>Already have an account? <a href="/login">Login</a> here</p>
 
