--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -14,7 +14,7 @@
     {% endfor %}
     {% endif %} -->
     <hr>
-        <h1>Welcome! The items in your shopping list are:</h1>
+        <h2>Items in your shopping list:</h2>
         <!-- Welcome {{ user.username }}!  -->
         <table>
             <tr>
@@ -45,12 +45,12 @@
                 {% endif %} 
                 <td>
                     <a href="/edit/{{ shoppinglistitem.id }}">
-                        <button>Edit item</button>
+                        <button class="btn btn-primary">Edit item</button>
                     </a>    
                 </td>
                 <td>
                     <a href="{% url 'shoppinglistitem-delete' shoppinglistitem.id  %}">
-                        <button>Delete item</button>
+                        <button class="btn btn-danger">Delete item</button>
                     </a>    
                 </td> 
             </tr>
@@ -58,8 +58,8 @@
         <tr><td>Sorry!!! You currently have no items in your shopping list.</td></tr>
         {% endfor %}
         </table>
-        <a href="/add"><button>Add an item</button></a>
-        <a href="/delete_list"><button>Delete List</button></a>
+        <a href="/add"><button class="btn btn-primary">Add an item</button></a>
+        <a href="/delete_list"><button class="btn btn-danger">Delete List</button></a>
 
     {% else %} <!-- If user is not authenticated -->
     <p>
