--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,40 @@
 .relative {
-    position: relative;
-    left: 30px;
-    border: 3px solid #73AD21;
+    /*position: relative;*/
+    /*left: 5px;*/
+    /*right: 5px;*/
+    /*border: 3px solid #73AD21;*/
+    border-radius: 6px;
+    width: 5%;
+  }
+
+  img {
+    float: left;
+  }
+
+  body {
+    padding: 0;
+    margin: 0;
+    background: #f2f6e9;
+  }
+
+  .navbar {
+    background: #6ab446;
+  }
+
+  .nav-link,
+  .navbar-brand {
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .nav-link {
+    margin-right: 1em !important
+  }
+
+  .nav-link:hover {
+    color: #000;
+  }
+
+  .navbar-collapse {
+    justify-content: flex-end;
   }
