Add styling to base.html

--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -16,7 +16,7 @@
     <hr>
         <h2>Items in your shopping list:</h2>
         <!-- Welcome {{ user.username }}!  -->
-        <table>
+        <table class="table table-dark">
             <tr>
                 <th>Item Name</th>
                 <th>Quantity</th>
