--- a/shoppinglist/templates/shoppinglist/logout.html
+++ b/shoppinglist/templates/shoppinglist/logout.html
@@ -4,11 +4,11 @@
 
 <title>Logout Page</title>
 
-<h1>Logout</h1>
+<h1 class="text-center">Logout</h1>
 
     <div class="content">
         <div class="section-inner clearfix">
-        <p>You have logged out Successfully! <a href="/login">Click here</a> to login again.</p>
+        <p class="text-center">You have logged out Successfully! <a href="/login">Click here</a> to login again.</p>
         </div>
     </div>
     
