--- a/shoppinglist/templates/shoppinglist/edit_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/edit_shopping_item.html
@@ -6,17 +6,18 @@
 
     {% if user.is_authenticated %}
         <h1>Edit an item in your shopping list:</h1>
-        <form method="POST">
+        <form class="button-space text-center" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
 
-            <button class="btn btn-primary" type="submit">Update Item</button>
+            <button class="btn btn-primary button-space" type="submit">Update Item</button>
         </form>
         
     {% else %} <!-- If user is not authenticated -->
         <p>
             Sorry! You cannot edit items in the shopping list because you are not currently 
-            logged in. Please sign in if you already have an account or sign up for one.
+            logged in. Please <a href="/login">log in</a> if you already have an account or 
+            <a href="{% url 'register' %}">sign up</a> if you don't have one.
         </p>     
     {% endif %} <!-- authentication end if -->
 
