--- a/shoppinglist/templates/shoppinglist/login.html
+++ b/shoppinglist/templates/shoppinglist/login.html
@@ -4,15 +4,15 @@
 
 <title>Login Page</title>
 
-<h1>Login</h1>
+<h1 class="text-center">Login</h1>
 
-<form method="POST">
+<form class="button-space text-center" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <!-- <button class="btn btn-success"><input type="submit" value="Login"></button> -->
-    <button class="btn btn-success">Login</button>
+    <button class="btn btn-success btn-lg button-space">Login</button>
 </form>
-<p>Don't have an account? <a href="{% url 'register' %}">Register</a> here</p>
+<p class="text-center">Don't have an account? <a href="{% url 'register' %}">Sign Up</a> here</p>
 
 {% endblock content %}
 
