--- a/shoppinglist/templates/shoppinglist/register.html
+++ b/shoppinglist/templates/shoppinglist/register.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 
-<title>Register Page</title>
+<title>Sign Up Page</title>
 
-<h1>Register</h1>
+<h1 class="text-center">Sign Up</h1>
 
-<form method="POST">
+<form class="label" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <!-- <input type="submit" value="Register"> -->
-    <button class="btn btn-success">Register</button>
+    <button class="btn btn-success btn-lg text-center button-space">Sign Up</button>
 </form>
-<p>Already have an account? <a href="/login">Login</a> here</p>
+<p class="text-center">Already have an account? <a href="/login">Login</a> here</p>
 
 {% endblock content %}
 
