--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -9,17 +9,20 @@
     <!-- {% endif %} -->
     <hr>
     {% if user.is_authenticated %}
-        <a href="{% url 'get_shopping_list' %}">Go Back</a>
-        <form method="POST">
+        <!-- <a href="{% url 'get_shopping_list' %}">Go Back</a> -->
+        <form class="button-space text-center" method="POST">
             {% csrf_token %}
             <p>Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
-            <input type="submit" value="Delete Item" />
+            <!-- <input type="submit" value="Delete Item" /> -->
+            <button class="btn btn-danger" type="submit">Delete Item</button>
+            <a href="{% url 'get_shopping_list' %}"><button class="btn btn-primary button-space">Go Back</button></a>
         </form>
 
     {% else %} <!-- If user is not authenticated -->
         <p>
             Sorry! You cannot delete items in the shopping list because you are not currently 
-            logged in. Please sign in if you already have an account or sign up for one.
+            logged in. Please <a href="/login">log in</a> if you already have an account or 
+            <a href="{% url 'register' %}">sign up</a> if you don't have one.
         </p> 
         
     {% endif %} <!-- authentication end if -->
