--- a/shoppinglist/templates/shoppinglist/login.html
+++ b/shoppinglist/templates/shoppinglist/login.html
@@ -4,7 +4,7 @@
 
 <title>Login Page</title>
 
-<h1 class="text-center">Login</h1>
+<h1 class="text-center heading">Login</h1>
 
 <form class="button-space text-center" method="POST">
     {% csrf_token %}
