--- a/shoppinglist/templates/shoppinglist/logout.html
+++ b/shoppinglist/templates/shoppinglist/logout.html
@@ -4,7 +4,7 @@
 
 <title>Logout Page</title>
 
-<h1 class="text-center">Logout</h1>
+<h1 class="text-center heading">Logout</h1>
 
     <div class="content">
         <div class="section-inner clearfix">
