--- a/shoppinglist/templates/shoppinglist/edit_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/edit_shopping_item.html
@@ -5,7 +5,7 @@
     <title>Edit Shopping List Item</title>
 
     {% if user.is_authenticated %}
-        <h1>Edit an item in your shopping list:</h1>
+        <h2 class="text-center heading">Edit an item in your shopping list:</h2>
         <form class="button-space text-center" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
@@ -14,11 +14,15 @@
         </form>
         
     {% else %} <!-- If user is not authenticated -->
-        <p>
-            Sorry! You cannot edit items in the shopping list because you are not currently 
-            logged in. Please <a href="/login">log in</a> if you already have an account or 
-            <a href="{% url 'register' %}">sign up</a> if you don't have one.
-        </p>     
+    <div class="container">
+        <div class="row"> 
+            <p class="heading">
+                Sorry! You cannot edit items in the shopping list because you are not currently 
+                logged in. Please <a href="{% url 'login' %}">log in</a> if you already have an account or 
+                <a href="{% url 'register' %}">sign up</a> if you don't have one.
+            </p>
+        </div> 
+    </div>    
     {% endif %} <!-- authentication end if -->
 
     <script>
