--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,9 +42,14 @@
   .button-space {
     position: relative;
     margin: 50px;  
-    /*text-align: center; */
+    /* text-align: center;  */
   }
 
-  .label {
+  .form-center {
     margin-left: 50px;
+  }
+
+  .heading {
+    margin-top: 100px;
+    margin-bottom: 80px;
   }
