--- a/shoppinglist/templates/shoppinglist/shoppinglist_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <title>Delete Shopping List Item</title>
+    <title>Delete Shopping List</title>
 
     <!-- {% if user.is_authenticated %} -->
         <!-- <p>{{user}}</p> -->
@@ -10,12 +10,12 @@
     <hr>
     {% if user.is_authenticated %}
         <!-- <a href="{% url 'get_shopping_list' %}">Go Back</a> -->
-        <h2 class="heading text-center">Delete an item in your shopping list</h2>
+        <h2 class="heading text-center">Delete a shopping list</h2>
         <form class="button-space text-center" method="POST">
             {% csrf_token %}
-            <p class="heading">Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
+            <p class="heading">Are you sure you want to delete this list?</p>
             <!-- <input type="submit" value="Delete Item" /> -->
-            <button class="btn btn-danger" type="submit">Delete Item</button>
+            <button class="btn btn-danger" type="submit">Delete List</button>
             <a href="{% url 'get_shopping_list' %}"><button class="btn btn-primary button-space">Go Back</button></a>
         </form>
 
@@ -23,8 +23,8 @@
     <div class="container"> 
         <div class="row"> 
             <p class="heading text-center">
-                Sorry! You cannot delete items in the shopping list because you are not currently 
-                logged in. Please <a href="{% url 'login' %}">log in</a> if you already have an account or 
+                Sorry! You cannot delete this list because you are not currently logged in. 
+                Please <a href="{% url 'login' %}">log in</a> if you already have an account or 
                 <a href="{% url 'register' %}">sign up</a> if you don't have one.
             </p>
         </div> 
