--- a/shoppinglist/templates/shoppinglist/edit_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/edit_shopping_item.html
@@ -16,7 +16,7 @@
     {% else %} <!-- If user is not authenticated -->
     <div class="container">
         <div class="row"> 
-            <p class="heading">
+            <p class="heading para-size">
                 Sorry! You cannot edit items in the shopping list because you are not currently 
                 logged in. Please <a href="{% url 'login' %}">log in</a> if you already have an account or 
                 <a href="{% url 'register' %}">sign up</a> if you don't have one.
