--- a/shoppinglist/templates/shoppinglist/logout.html
+++ b/shoppinglist/templates/shoppinglist/logout.html
@@ -8,7 +8,7 @@
 
     <div class="content">
         <div class="section-inner clearfix">
-        <p class="text-center">You have logged out Successfully! <a href="/login">Click here</a> to login again.</p>
+        <p class="text-center para-size">You have logged out Successfully! <a href="{% url 'login' %}">Click here</a> to login again.</p>
         </div>
     </div>
     
