--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -13,7 +13,7 @@
         <h2 class="heading text-center">Delete an item in your shopping list</h2>
         <form class="button-space text-center" method="POST">
             {% csrf_token %}
-            <p class="heading">Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
+            <p class="heading para-size">Are you sure you want to delete this item "{{shoppinglistitem}}"?</p>
             <!-- <input type="submit" value="Delete Item" /> -->
             <button class="btn btn-danger" type="submit">Delete Item</button>
             <a href="{% url 'get_shopping_list' %}"><button class="btn btn-primary button-space">Go Back</button></a>
@@ -22,7 +22,7 @@
     {% else %} <!-- If user is not authenticated -->
     <div class="container"> 
         <div class="row"> 
-            <p class="heading text-center">
+            <p class="heading text-center para-size">
                 Sorry! You cannot delete items in the shopping list because you are not currently 
                 logged in. Please <a href="{% url 'login' %}">log in</a> if you already have an account or 
                 <a href="{% url 'register' %}">sign up</a> if you don't have one.
