--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,3 +53,24 @@
     margin-top: 100px;
     margin-bottom: 80px;
   }
+
+  .fab {
+    /*padding: 20px;
+    font-size: 30px;
+    width: 15px; */
+    /*padding: 10px;*/
+    font-size: 30px;
+    text-decoration: none;
+  }
+
+  .fab:hover {
+    opacity: 0.7;
+  }
+
+  .footer-weight {
+    font-weight: bold;
+  }
+
+  .para-size {
+    font-size: 1.5em;
+  }
